src/App.css
.App {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-align: center;
  background-color: black;
  color: #b7bfc4;
}

/* why don't these work? Trying to hide the browser window scroll bars even when at min widths*/
/* .body {
  scrollbar-width: none;
}
.body::-webkit-scrollbar {
  display: none;
} */
/* .body {
  overflow: hidden;
} */

.workspace {
  height: 100vh;
  min-width: 500px;
  overflow-x: hidden;
}

.track-editor {
  outline: none;
}

.track-editor-controls {
  margin-top: 7px;
  margin-bottom: 8px;
}

.track-controls-header {
  height: 35px;
  background-color: black;
}

.track-controls,
.instrument-controls {
  margin-top: 35px;
  background-color: #15191b;
}

.track-control {
  position: relative;
  border-bottom: 2px solid black;
}

.instrument-icon {
  position: absolute;
  top: 5px;
  left: 10px;
}

.instrument-select {
  position: absolute;
  margin-top: 25px;
  padding-left: 5px;
  left: 5px;
  top: -20px;
  height: 22px;
  width: 144px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  z-index: 1;
  background-color: rgb(0, 0, 0);
}

.instrument-option {
  margin-right: 3px;
  margin-top: -9px;
}

.instrument-option:hover {
  margin-top: -14px;
}

.track-name {
  position: absolute;
  top: 5px;
  left: 5px;
  display: inline-block;
  font-size: 14px;
  height: 21px;
  width: 144px;
  border-radius: 10px;
  padding-left: 27px;
  padding-right: 6px;
  background-color: rgb(67, 67, 67);
  color: white;
  outline: none;
  border: none;
}

.volume-fader {
  -webkit-appearance: none;
  appearance: none;
  position: absolute;
  top: 35px;
  left: 7px;
  width: 138px;
  outline: none;
}

.volume-fader::-webkit-slider-runnable-track {
  height: 2px;
  background: #ddd;
  border: none;
  border-radius: 2px;
}

.volume-fader::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  height: 12px;
  width: 12px;
  margin-top: -5px;
  background-color: blue;
  border-radius: 6px;
}

/* .volume-fader::-moz-range-thumb {
  height: 2px;
  width: 2px;
} */

.pan-control {
  -webkit-appearance: none;
  appearance: none;
  position: absolute;
  top: 53px;
  left: 14px;
  width: 50px;
  outline: none;
}

.pan-control::-webkit-slider-runnable-track {
  height: 2px;
  background: #ddd;
  border: none;
  border-radius: 2px;
}

.pan-control::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  height: 12px;
  width: 12px;
  margin-top: -5px;
  background-color: blue;
  border-radius: 6px;
}

/* .pan-control::-moz-range-thumb {
  height: 2px;
  width: 2px;
} */

.track-control-btn-container {
  position: relative;
  left: 70px;
}

.track-control-chk {
  display: none;
}

.mute-btn,
.solo-btn,
.global-btn {
  font-family: monospace;
  display: inline-block;
  position: relative;
  top: 45px;
  /* left: px; */
  width: 20px;
  height: 20px;
  margin-left: 5px;
  border: 1px solid black;
  background-color: rgb(67, 67, 67);
}

.track-control-btn-content {
  position: absolute;
  top: -3px;
  left: 5px;
  user-select: none;
}

.mute-btn-text {
  color: red;
}

.solo-btn-text {
  color: yellow;
}

.global-btn-icon {
  position: absolute;
  top: 1px;
  left: 1px;
  user-select: none;
  stroke: rgb(95, 6, 95);
  fill: rgb(95, 6, 95);
}

.track-control-chk:checked + .mute-btn {
  background-color: red;
}

.track-control-chk:checked + .solo-btn {
  background-color: rgb(231, 195, 17);
}

.track-control-chk:checked + .global-btn {
  background-color: rgb(95, 6, 95);
}

.track-control-chk:checked + .mute-btn .mute-btn-text,
.track-control-chk:checked + .solo-btn .solo-btn-text {
  color: white;
}

.track-control-chk:checked + .global-btn .global-btn-icon {
  stroke: white;
  fill: white;
}

.instrument-note {
  background-color: white;
  color: black;
}

.instrument-note-sharp {
  background-color: black;
  color: white;
}

.scroll-content-wrapper {
  width: calc(100vw);
  float: left;
  position: relative;
}

.content-panel-header {
  position: absolute;
  top: 0px;
  margin-right: 6px;
  width: 10%;
  max-width: 192px;
  z-index: 1;
}

.content-panel {
  float: left;
  margin-right: 6px;
  width: 10%;
  max-width: 192px;
  height: 90%;
  max-height: 80vh;
}

.content-h {
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-width: none;
  background-color: #181d20; /* move to track-editor when you make it */
  position: relative;
}

.content-h::-webkit-scrollbar {
  display: none;
}

.content-header {
  position: absolute;
  z-index: 1;
}

.content-body {
  margin-top: 35px;
}

.content-v {
  width: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  text-align: left;
  scrollbar-width: none;
  max-height: 80vh;
}

/* .scroll-content-zoom-wrapper {
  width: 90%;
  float: left;
} */

.ruler {
  width: fit-content;
  height: 35px; /* Using this in TrackEditor component's vertical scrollbar and content-body CSS class. If you change this, change it in those places as well. */
  background-color: #0d1012;
}

.ruler-labels {
  white-space: nowrap;
  position: relative;
}

.ruler-label {
  font-size: 12px;
  font-weight: bold;
  text-align: left;
  position: absolute;
  top: -1px;
  margin-left: 4px;
  user-select: none;
}

.grid-wrapper {
  width: 100%;
  border-bottom: 1px solid black;
  position: relative;
}

.tracks {
  position: absolute;
  top: 0px;
}

.track {
  border-bottom: 2px solid black;
  position: relative;
}

.region {
  position: absolute;
  background-color: rgba(0, 150, 0, 0.137);
  border-radius: 5px; /* what about corner notes? */
}

.track-note,
.editor-note {
  display: inline-block;
  background-color: green;
  position: absolute;
}

.midi-editor {
  position: absolute;
  top: 0px;
  height: 2112px;
  width: 100%;
}

.position-marker {
  position: absolute;
  top: 35px;
  width: 2px;
  border-left: 2px solid blue;
  pointer-events: none;
}

.position-marker-head-container {
  position: absolute;
  top: -10px;
  left: -6px;
  width: 10px;
  height: 10px;
}

.position-marker-head {
  fill: blue;
}

.player-position-marker {
  position: absolute;
  top: 35px;
  width: 2px;
  border-left: 2px solid orange;
  pointer-events: none;
}

.player-position-marker-head {
  fill: orange;
}

.play-button {
  margin-right: 5px;
}

.control-block {
  margin-left: 30px;
}

.plus-minus-button {
  width: 25px;
}

.scrollbar-h {
  /* use variable, do the same for V */
  position: relative;
  margin-left: min(calc(10% + 6px), 198px);
  width: 100vw - min(calc(10% + 6px), 198px);
  height: 13px;
  background-color: transparent;
  /* background-color: #f1f1f1; */
  overflow-x: clip;
  border-radius: 8.5px;
}

.scrollbar-v {
  position: relative;
  margin-left: calc(100vw - 13px);
  width: 13px;
  top: 35px;
  background-color: transparent;
  /* background-color: #f1f1f1; */
  overflow-y: clip;
  border-radius: 8.5px;
}

.scrollbar-h .scroll-thumb {
  height: 13px;
  transition-property: left;
  background-color: #9d9d9dff;
}

.scrollbar-v .scroll-thumb {
  width: 13px;
  transition-property: top;
  background-color: #9d9d9d33;
}

.scroll-thumb {
  position: absolute;
  border-radius: 8.5px;
  transition-timing-function: ease-in-out;
}

.scroll-thumb:hover {
  background-color: #c1c1c1ff;
}

.scroll-thumb:active {
  background-color: #787878ff;
}

